--- a/css/style.css
+++ b/css/style.css
@@ -244,13 +244,15 @@ body {
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     font-size: 16px;
+    color: #51453f;
     position: relative;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 header {
     position: relative;
     width: 100%;
-    margin: 30px 0;
+    padding: 20px 0 0 0;
 }
 
 .section-title {
@@ -266,6 +268,7 @@ header {
     align-items: center;
     justify-content: space-between;
 }
+
 .header .logo {
     color: #222222;
     font-weight: 400;
@@ -276,11 +279,19 @@ header {
 .header .logo span {
     font-weight: 700;
 }
-.header .nav-items  li {
+.nav-menu {
+    background: #f6f6f6;
+    padding: 15px 0;
+}
+.nav-items {
+    display: flex;
+    justify-content: center;
+}
+ .nav-items  li {
     display: inline-block;
     padding: 0 30px;
 }
-.header .nav-items li a {
+ .nav-items li a {
     color: #333333;
     text-transform: uppercase;
     font-size: 13px;
@@ -290,6 +301,13 @@ header {
     display: inline-block;
     font-size: 22px;
     color: #000000;
+}
+.header .gender a {
+    font-size: 12px;
+    color: #2a2a2a;
+    text-transform: uppercase;
+    text-decoration: underline;
+    padding: 0 10px;
 }
 .burger-menu {
     position: relative;
@@ -407,19 +425,25 @@ header {
     display: block;
     background-color: rgba(0,0,0, 0.5);
 }
+.burger-menu_nav .gender {
+    padding: 0 30px 15px 30px;
+}
 .header-fixed {
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
-    height: 80px;
+    z-index: 99999;
+    opacity: 1;
     justify-content: space-around;
     animation-name: show-header;
     animation-duration: 1s;
     background: #ffffff;
-    z-index: 50;
+    padding: 20px 0 0 0;
 }
-
+.search {
+    display: none;
+}
 @keyframes show-header {
     0% {
         opacity: 0;
@@ -636,7 +660,79 @@ span:focus {
     width: 560px;
     height: 310px;
 }
+#collection-сlothes {
+    padding: 80px 0;
+}
+#collection-сlothes .box .title {
+    margin: 20px 0;
+    font-size: 14px;
+    color: #2a2a2a;
+    text-align: center;
+    font-weight: 600;
+}
+#collection-сlothes .box .subtitle {
+    font-size: 13px;
+    text-align: center;
+    line-height: 20px;
+    max-width: 560px;
+    margin-left: auto;
+    margin-right: auto;
+    color: #51453f;
+    font-style: italic;
+}
+#collection-сlothes .box .look {
+    max-width: 160px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 30px;
+    position: relative;
+    padding: 5px 15px;
+}
+#collection-сlothes .box .look a {
+    text-align: center;
+    font-size: 17px;
+    color: #000000;
+}
+#collection-сlothes .box .look:before{
+    position: absolute;
+}
+#black-edition  #collection-сlothes {
+    padding: 0 0 70px 0;
+}
+#black-edition  #collection-сlothes .box .title {
+    font-size: 30px;
+}
+#black .item {
+    margin-bottom: 30px;
+    position: relative;
+}
+#black  .row-title {
+    color: #51453f;
+    font-size: 18px;
+    font-weight: 700;
+}
+#black .item .btn-view {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,.8);
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
+    font-size: 1rem;
+    padding-top: 30px;
+    opacity: 0;
+    transition: opacity .3s,padding-top .3s;
+}
+#black .item:hover .btn-view {
+    opacity: 1;
+    padding-top: 0;
 
+}
 .owl-nav button {
     background: none;
     color: #FFAA25;
@@ -1013,54 +1109,6 @@ footer .author a {
     margin: 0 19px;
 }
 
-#thebrand #brand {
-    padding: 80px 0;
-    position: relative;
-}
-
-#thebrand #brand .brand-item .brand-text {
-    margin-top: 40px;
-}
-
-#thebrand #brand .brand-text h3 {
-    font-size: 18px;
-    color: #575153;
-    text-transform: uppercase;
-    margin-bottom: 30px;
-    font-weight: 600;
-}
-
-#thebrand #brand .brand-text p {
-    font-size: 13px;
-    color: #727272;
-    text-transform: uppercase;
-    margin-bottom: 20px;
-    font-weight: 500;
-}
-
-#thebrand #brand span {
-    color: #8E8C8C;
-    font-size: 15px;
-    line-height: 1.4em;
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-}
-
-#thebrand #brand .brand-item span span {
-    color: #33D3D3;
-    font-weight: 600;
-}
-
-#thebrand #brand .brand-item img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-}
-
-.brand-item {
-    margin-bottom: 30px;
-}
-
 #mens-wear {
     padding: 70px 0;
 }
@@ -1311,7 +1359,10 @@ footer .author a {
     cursor: pointer;
     user-select: none;
 }
-
+ #cart .cart-size .size-item input:checked + label {
+    background: #666666;
+    color: #ffffff;
+}
 #cart .buy-button {
     margin-top: 33px;
 }
@@ -1460,24 +1511,16 @@ footer .author a {
     padding: 90px 0;
     background: #f2f2f2;
 }
-
-#ambrassador .box-1 {
-    width: 100%;
-    height: auto;
-}
-
-#ambrassador .items .box-1 .img {
+#ambrassador .items .box-1 img  {
     width: 100%;
     height: 500px;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    overflow: hidden;
+    object-fit: cover;
 }
 
 #ambrassador .items-info {
     height: 200px;
     padding: 40px 20px;
-
     background: #fff;
 }
 
@@ -1562,5 +1605,6 @@ footer .author a {
     margin-bottom: 30px;
     line-height: 25px;
 }
+
 
 
